--- a/Rezerwacje/Rezerwacje.csproj
+++ b/Rezerwacje/Rezerwacje.csproj
@@ -95,6 +95,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Elements\Cart.cs" />
+    <Compile Include="Elements\Enums.cs" />
+    <Compile Include="Elements\Item.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
